0.8.0
* dbm: new module: gdbm interface (2009-10-03)
* b64: new module: Base64 module (2009-09-24)
* frc: rc+calc-gcd,frc+calc-lcm simplified (2009-09-18, thanks to Albert)
* scf: %q for quoted string added (2009-09-02)
* spf: %q for quoted string added (2009-09-02)
* scf: new module: Sscanf module (2009-08-19)
* spf: %e and %E for floats added (2009-08-16)
* tos: new word: tos-write-float (2009-07-01)
* gsv: new module: gtk-server interface (2009-06-20)
0.7.0
! stt: word for stringtable addition changed from ," to +" (2009-05-20)
* dom: small bug fixes for processing instruction (2008-11-18)
* zif: new module: GZip file reader  (2008-10-12)
* gzi: new module: GZip reader (2008-10-11)
* chs: new words: chs-set-list,chs-reset-list (2008-10-04)
* bar: new words: bar-set-list,bar-reset-list (2008-10-04)
* bar: new words: bar^or,bar^and,bar^xor,bar^move (2008-10-03)
* chs: new words: chs^or,chs^and,chs^xor (2008-10-01)
* rgx: classes added (2008-09-27)
* spf: new module: Sprintf module (2008-09-13)
* log: new module: Logging module (2008-09-09)
* bis: new module: Bit input stream (2008-08-20)
* cbf: new module: circulair buffer (2008-06-02)
* lbf: new module: lineair buffer (2008-05-29)
* lxf: config.fs/make.fs/readme added (2008-05-23)
* stc: bug fix in +field (2008-05-23)
* gzf: new module: GZip file (2008-05-07)
* act: new words: act-clear, act-execute?
* act,acn extends bct,bcn (2008-04-24)
* bcn: new words: bcn-cell@,bcn-cell!
* bct: new word: bct-execute?
* bct,bcn,bci extends bnt,bnn,bni (2008-04-14)
* bnt,bnn,bni: new modules: Generic binary tree (2008-04-06)
* a32: new module: Adler32 algorithm (2008-04-03)
* chs: chs-char? bug fixed
* SP-Forth: config.fs/make.fs/readme added
* dist: also zip file with cr/lf line-endings
* iForth: config.fs/make.fs/readme added
* fsm: new module: Finite State Machine (2008-03-05)
* fst: new module: FSM State (2008-03-05)
* ftr: new module: FSM Transition (2008-03-05)
* snl: new word: snl-execute? (2008-03-05)
0.6.0